@@ -4,8 +4,8 @@
 #include "../blib/BLibDefinitions.h"
 #include "Definitions.h"
 
-int AlignColorSpace(char*, int, char*, int, ScoringMatrix*, AlignEntry*, char, int);
-int AlignColorSpaceMismatchesOnly(char*, int, char*, int, ScoringMatrix*, AlignEntry*, char);
-int AlignColorSpaceFull(char*, int, char*, int, ScoringMatrix*, AlignEntry*, char);
+int AlignColorSpace(char*, int, char*, int, ScoringMatrix*, AlignEntry*, char, int, int);
+int AlignColorSpaceMismatchesOnly(char*, int, char*, int, int, ScoringMatrix*, AlignEntry*, char);
+int AlignColorSpaceFull(char*, int, char*, int, int, ScoringMatrix*, AlignEntry*, char);
 
 #endif
