@@ -58,7 +58,7 @@ PACKAGE_BUGREPORT;
    */
 enum { 
 	DescInputFilesTitle, DescRGFileName, DescMatchFileName, DescScoringMatrixFileName, 
-	DescAlgoTitle, DescAlignmentType, DescSpace, DescStartContig, DescStartPos, DescEndContig, DescEndPos, DescOffsetLength, DescMaxNumMatches, DescPairedEnd, DescNumThreads,
+	DescAlgoTitle, DescAlignmentType, DescSpace, DescScoringType, DescStartContig, DescStartPos, DescEndContig, DescEndPos, DescOffsetLength, DescMaxNumMatches, DescPairedEnd, DescNumThreads,
 	DescPairedEndOptionsTitle, DescPairedEndLength, DescForceMirroring, 
 	DescOutputTitle, DescOutputID, DescOutputDir, DescTmpDir, DescTiming, 
 	DescMiscTitle, DescHelp
@@ -79,6 +79,7 @@ static struct argp_option options[] = {
 	{0, 0, 0, 0, "=========== Algorithm Options: (Unless specified, default value = 0) ================", 2},
 	{"alignmentType", 'a', "alignmentType", 0, "0: Full alignment 1: mismatches only", 2},
 	{"space", 'A', "space", 0, "0: NT space 1: Color space", 2},
+	{"scoringType", 'X', "scoringType", 0, "Final alignment score should by in 0: NT space 1: Color space", 2},
 	{"startContig", 's', "startContig", 0, "Specifies the start chromosome", 2},
 	{"startPos", 'S', "startPos", 0, "Specifies the end position", 2},
 	{"endContig", 'e', "endContig", 0, "Specifies the end chromosome", 2},
@@ -122,7 +123,7 @@ static struct argp argp = {options, parse_opt, args_doc, doc};
 #else
 /* argp.h support not available! Fall back to getopt */
 static char OptionString[]=
-"a:d:e:l:m:n:o:r:s:x:A:E:H:M:O:S:T:2fhpt";
+"a:d:e:l:m:n:o:r:s:x:A:E:H:M:O:S:T:X:2fhpt";
 #endif
 
 enum {ExecuteGetOptHelp, ExecuteProgram, ExecutePrintProgramParameters};
@@ -193,6 +194,7 @@ main (int argc, char **argv)
 								arguments.scoringMatrixFileName,
 								arguments.alignmentType,
 								arguments.space,
+								arguments.scoringType,
 								arguments.startContig,
 								arguments.startPos,
 								arguments.endContig,
@@ -334,6 +336,10 @@ int ValidateInputs(struct arguments *args) {
 		PrintError(FnName, "space", "Command line argument", Exit, OutOfRange);
 	}
 
+	if(args->scoringType != NTSpace && args->scoringType != ColorSpace) {
+		PrintError(FnName, "scoringType", "Command line argument", Exit, OutOfRange);
+	}
+
 	if(args->startContig < 0) {
 		PrintError(FnName, "startContig", "Command line argument", Exit, OutOfRange);
 	}
@@ -427,6 +433,7 @@ AssignDefaultValues(struct arguments *args)
 
 	args->alignmentType = FullAlignment;
 	args->space = NTSpace;
+	args->scoringType = NTSpace;
 	args->startContig=0;
 	args->startPos=0;
 	args->endContig=INT_MAX;
@@ -475,6 +482,7 @@ PrintProgramParameters(FILE* fp, struct arguments *args)
 	   */
 	fprintf(fp, "alignmentType:\t\t\t\t%d\n", args->alignmentType);
 	fprintf(fp, "space:\t\t\t\t\t%d\n", args->space);
+	fprintf(fp, "scoringType:\t\t\t\t%d\n", args->scoringType);
 	fprintf(fp, "startContig:\t\t\t\t%d\n", args->startContig);
 	fprintf(fp, "startPos:\t\t\t\t%d\n", args->startPos);
 	fprintf(fp, "endContig:\t\t\t\t%d\n", args->endContig);
@@ -617,6 +625,8 @@ parse_opt (int key, char *arg, struct argp_state *state)
 					case 'T':
 						StringCopyAndReallocate(&arguments->tmpDir, OPTARG);
 						break;
+					case 'X':
+						arguments->scoringType=atoi(OPTARG);break;
 					default:
 #ifdef HAVE_ARGP_H
 						return ARGP_ERR_UNKNOWN;
